Fixed unnecessary z-index in the radio button component
When the radio button is behind some translucent area, the radio rings overlaps the area in front of it. This behavior is caused by the z-index attribute defined for the rings. Removing the z-index, prevents this behavior from happening.

--- a/material-design-lite-gwt-lib/src/main/resources/com/github/ilyes4j/gwt/mdl/mdl-gwt.css
+++ b/material-design-lite-gwt-lib/src/main/resources/com/github/ilyes4j/gwt/mdl/mdl-gwt.css
@@ -3,3 +3,13 @@
 .mdl-button.mdl-img-button {
 	font-size: initial;
 }
+
+/*
+There is no apparent reason for setting specific index values for toggle parts
+which renders just fine without indexes. Furthermore, the index attribute causes
+the undesired effect of making the said part show up in front of other
+overlaying elements.
+*/
+.mdl-radio__inner-circle, .mdl-radio__outer-circle {
+	z-index: auto !important;
+}
